css/expdb.css
/* ... */
.menu li:first-child{
  border-top:none
}

.menu li.filter{
  padding:3px;
}

.menu a{
  display:block;
  padding:7px 10px 7px 7px;
  text-shadow:0 1px 0 #fff;
  color: #888;
}

.menu a.selected{
  background:#dedede;
  font-weight:bold;
  color:#d26911;
  cursor:default
}

.menu a.selected i{
  color:#d26911;
}

.navbar-form .form-control{
  width: 100% !important;
}
.navbar-form{
  padding-top: 12px !important;
}

.topchapter a .counter{
  float:right;
  margin-left:5px
}

.coverspacer{
   height: 30px;
}

.blueheader{
  color: #333;
}

.greenheader{
  color: #757575;
}

.yellowheader{
  color: #333;
  margin-bottom: 20px;
}

.redheader{
  color: #333;
  margin-bottom: 20px;
}

.upload{
  margin-top: 10px;
  margin-bottom: 10px;
  width: 100%
}

.filtertitle{
  display:block;
  padding-top: 15px;
  padding-bottom: 5px;
}

.filtertitle a{
  color: #333333;
  text-decoration:none;
  font-size: 14px;
  font-weight: 400;
}

.option-heading{
  display:block;
  padding-top: 7px;
  padding-bottom: 7px;
}

.option-heading a{
  color: #333333;
  text-decoration:none;
  font-size: 14px;
  font-weight: 400;
}

.option-body{
  padding-left:15px;
  border-top: 1px solid #aeaeae;
  border-bottom: 1px solid #aeaeae;
}

.query-heading{
  display:block;
  padding-top: 7px;
  padding-bottom: 7px;
}

.query-heading a{
  color: #333333;
  text-decoration:none;
  font-size: 15px;
}

.query-body{
  padding-left:15px;
}

.detail-container{
  padding-left: 30px;
  padding-right: 30px;
}

.topborder{
  background: #ececec;
    overflow: hidden;
    height: 100vh;
    position: relative;
    backface-visibility: hidden;
    will-change: overflow;
    clear: both;
}

.endless{
      height: 100%;
}

.tip{
  font-size: 11px !important;
  margin: 0;
}

.sectionlogo{
  display: inline-block;
  float: left;
  padding-top: 5px;
  padding-left: 10px;
  padding-right: 3px;
}

.sectionlogo img{
  height: 40px;
}


.sectionlogo a{
  color: #666666;
  text-decoration: none
}

.sectiontitleblue{
  display: inline-block;
  float: left;
  font-weight: 300;
  color: #428bca;
}

.sectiontitleblue a{
  color: #428bca;
  text-decoration: none
}

.sectiontitlegreen{
  display: inline-block;
  float: left;
  font-weight: 300;
  color: #5cb85c;
}

.sectiontitlegreen a{
  color: #5cb85c;
  text-decoration: none
}

.sectiontitlepurple{
  display: inline-block;
  float: left;
  font-weight: 300;
  color: #854AB8;
}

.sectiontitlepurple a{
  color: #854AB8;
  text-decoration: none
}

.sectiontitlered{
  display: inline-block;
  float: left;
  font-weight: 300;
  color: #d9534f;
}

.sectiontitlered a{
  color: #d9534f;
  text-decoration: none
}

.sectiontitleyellow{
  display: inline-block;
  float: left;
  font-weight: 300;
  color: #f0ad4e;
}

.sectiontitleyellow a{
  color: #f0ad4e;
  text-decoration: none
}

.newmenu li > a{
  color: #666;
}

.newmenu li i{
  padding-right: 5px;
}

.lead{
  font-weight: 300 !important;
}

.openmlsectioninfo{
  background: #ececec;
  font-family: "RobotoDraft","Roboto",sans-serif;
  font-size: 14px;
  padding-top: 20px;
  padding-bottom:50px;
  /* height: 100vh; */
    overflow-y: auto;
    overflow-x: visible;
    -webkit-overflow-scrolling: touch;
    -ms-overflow-style: none;
}

.guidesection{
  background: #ffffff;
}

.guidecontainer{
  background-color: #ffffff;
}

.guidechapter{
  padding-top: 5px;
  background-color: #f6f6f6;
  border-bottom: 1px solid #d6d6d6;
  border-radius: 0px;
  box-shadow: none;
  padding-bottom: 5px;
  margin-bottom: 0px;
}

.sidenav panel{
  background-color: #f6f6f6;
}

.topchapter{
  margin-top: 20px;
  background-color: #f6f6f6;
  border-bottom: 1px solid #d6d6d6;
  border-radius: 0px;
  box-shadow: none;
  padding-bottom: 10px;
}

.guidechapter-contact{
  margin-top: 30px;
  margin-bottom: 30px;
  background-color: #f6f6f6;
  box-shadow: none;
  padding-left: 15px;
  padding-bottom: 60px;
}

.simplesection{
  font-family: "RobotoDraft","Roboto",sans-serif;
  font-size: 14px;
  padding-bottom: 50px;
    overflow-y: auto;
    overflow-x: visible;
    height: 100%;
    -webkit-overflow-scrolling: touch;
    -ms-overflow-style: none;
}

.searchicon{
  text-align: center;
}

.openmlsectioninfo::-webkit-scrollbar {
 display: none;
}

.openmlsectioninfo h1,h2,h3{
  font-family: 'Roboto', sans-serif;
  font-weight: 300 !important;
  margin-bottom: 10px;
  margin-top: 10px;
  line-height: 48px;
}

.openmlsectioninfo h1{
  font-size: 40px;
  color: #757575 !important;
  margin-bottom: 20px;
}

.simpleheader h1{
  font-size: 40px;
  color: #757575 !important;
  margin-bottom: 20px;
}

.openmlsectioninfo h1 > a{
  color: #757575 !important;
}


.openmlsectioninfo h1 i{
  padding-right: 10px;
}


.openmlsectioninfo h2{
  margin-top: 20px;
  font-size: 25px;
  margin-bottom: 20px;
}


.openmlsectioninfo h3{
  font-size: 25px;
  padding-top:30px;
  padding-bottom: 5px;
  clear: both;
}

.markdown-body h1{
  font-family: 'Roboto', sans-serif;
  border: none !important;
  margin-top: 28px;
  font-size: 25px;
  color: #ec5148;
  margin-top: 20px !important;
  margin-bottom: 10px !important;
  padding: 0px !important;
}


.markdown-body h2{
  font-family: 'Roboto', sans-serif;
  border: none !important;
  margin-top: 28px;
  font-size: 25px;
  color: #ec5148;
  margin-top: 20px !important;
  margin-bottom: 10px !important;
  padding: 0px !important;
}

.markdown-body h3{
  font-family: 'Roboto', sans-serif;
  border: none !important;
  margin-top: 28px;
  font-size: 22px;
  color: #ec5148;
  margin-top: 20px !important;
  margin-bottom: 10px !important;
  padding: 0px !important;

}

.markdown-body h4{
  font-family: 'Roboto', sans-serif;
  border: none !important;
  margin-top: 28px;
  font-size: 19px;
  color: #ec5148;
  margin-top: 20px !important;
  margin-bottom: 10px !important;
  padding: 0px !important;

}
/* ... */

